src/App.css
.App {
    max-width: 600px;
    margin: 0 auto;
    margin-top: 50px;
}

.App-logo {
    height: 6vmin;
    pointer-events: none;
    display: flex;
    flex-direction: column;
}

@media (prefers-reduced-motion: no-preference) {
    .App-logo {
        animation: App-logo-spin infinite 20s linear;
    }
}

.App-header {
    background-color: #282c34;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    font-weight: bold;
    color: green;
    font-weight: bold;
}

.App-buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 150px;
    margin-bottom: 30px;
}

#slide {
    border: 2px solid #eee;
    padding: 1rem;
    min-height: 250px;
    box-shadow: 10px 10px 10px #aaaaaa;
}

button[disabled]:hover {
    cursor: not-allowed;
}

.App-link {
    color: #61dafb;
}

@keyframes App-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

